# todo-app

./: Dockerfile.dev  docker-compose.yml  pyproject.toml
frontend/: app.py
